Added and updated various styling pages primarily on MoviePage - playing with a few different features and how I'm going to set them up + Adding overflow containers for components with a lot of results - also trying some fade out capabilities

--- a/frontend/src/components/MovieDetails/MovieDetails.css
+++ b/frontend/src/components/MovieDetails/MovieDetails.css
@@ -29,3 +29,36 @@
 .details-flex {
     display: flex;
 }
+
+.cast-profile {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 3px;
+}
+
+.cast-container {
+    height: 500px;
+    width: 200px;
+    overflow-y: scroll;
+    -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(234, 234, 234);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background-color: none;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: lightgray;
+}
