--- a/frontend/src/components/MovieImages/MovieImages.css
+++ b/frontend/src/components/MovieImages/MovieImages.css
@@ -4,4 +4,12 @@
     justify-content: center;
     background-size: cover;
     height: 450px;
+    width: 100%;
+    object-fit: cover;;
+}
+
+.fade-container {
+    width: 100%;
+    height: 450px;
+    margin-bottom: 20px;
 }
