--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,12 +1,17 @@
 footer {
-  margin-top: 50px;
+  margin-top: 200px;
   bottom: 0;
   font-size: 1.2rem;
   left: 0;
-  padding: 1rem;
+  padding: 2rem;
   text-align: center;
   width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background: steelblue;
+  color: #90cea1;
   box-shadow: 4px 2px 5px gray;
 }
 
