--- a/frontend/src/components/MovieDetails/MovieDetails.css
+++ b/frontend/src/components/MovieDetails/MovieDetails.css
@@ -1,3 +1,36 @@
+.poster-image {
+    margin-right: 30px;
+}
+
+.rating-bar {
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
+
+.movie-headline {
+    padding-right: 65px;
+}
+
+.movie-poster-and-details {
+    display: flex;
+    margin-bottom: 30px;
+    flex-wrap: nowrap;
+    flex-direction: row;
+}
+
+.movie-card {
+    display: flex;
+    flex-direction: column;
+    width: 1080px;
+    padding: 35px;
+    border-radius: 30px;
+    margin-bottom: 30px;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 .cert-grade {
     outline: solid;
     width: fit-content;
@@ -28,19 +61,109 @@
 
 .details-flex {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.cert-and-info {
+    display: flex;
+    margin-bottom: 10px;
+    align-items: baseline;
+    margin-top: 15px;
+}
+
+.director-field {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.movie-tagline {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    font-style: oblique;
+    font-weight: 200;
+    font-size: 22px;
+}
+
+.overview-tag {
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.overview-body {
+    text-align: justify;
+}
+
+.cast-headline {
+    margin-bottom: 15px;
 }
 
 .cast-profile {
-    width: 150px;
-    height: 150px;
+    width: 185px;
+    height: 250px;
     object-fit: cover;
     object-position: top;
-    border-radius: 3px;
+    border-radius: 10px;
+    padding-bottom: 10px;
+}
+
+.cast-card {
+    background-color: #ebeef0;
+    border-radius: 10px;
+    margin-right: 15px;
+    height: 350px;
+}
+
+.cast-name {
+    padding: 0 12px;
 }
 
 .cast-container {
-    height: 500px;
-    width: 200px;
-    overflow-y: scroll;
-    -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
+    display: flex;
+    height: 400px;
+    width: 100%;
+    overflow-x: auto;
+}
+
+.full-cast-button {
+    padding: 20px;
+    height: 350px;
+    width: 185px;
+    font-family: inherit;
+    font-weight: 800;
+    font-size: larger;
+    border: none;
+    border-radius: 10px;
+    background-color: none;
+}
+
+.full-cast-button:hover {
+    background-color: gray;
+}
+
+.user-add-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.movie-add-buttons {
+    padding: 20px 30px;
+    width: 230px;
+    font-family: inherit;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: large;
+    text-align: end;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 30px;
+}
+
+.movie-add-buttons:hover {
+    background-color: darkgray;
+}
+
+.button-text {
+    margin-left: 35px;
 }
