--- a/frontend/src/components/MovieMedia/MovieMedia.css
+++ b/frontend/src/components/MovieMedia/MovieMedia.css
@@ -1,12 +1,13 @@
 .video-player {
     width: 300px;
     height: 169px;
+    margin-right: 15px;
 }
 
 .video-container {
     display: flex;
     margin-top: 10px;
     margin-bottom: 20px;
-    width: 800px;
+    width: 100%;
     overflow-x: auto;
 }
