--- a/frontend/src/pages/MoviePage/MoviePage.css
+++ b/frontend/src/pages/MoviePage/MoviePage.css
@@ -1,10 +1,18 @@
-.header-container {
-    width: 100%;
-    height: 400px;
+.bottom-content {
+    width: 1080px;
+    padding: 35px;
+    background-color: white;
+    border-radius: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.movie-header {
-    width: 100%;
-    object-fit: cover;
-    height: 400px;
+.provider-headline {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+.media {
+    margin-right: 15px;
 }
