Wrapping up styling until later for some last minute additions - jumping into project presentation deck now

--- a/frontend/src/components/MovieDetails/MovieDetails.css
+++ b/frontend/src/components/MovieDetails/MovieDetails.css
@@ -156,7 +156,11 @@
 }
 
 .movie-add-buttons:hover {
-    background-color: darkgray;
+    background-color:darkseagreen
+}
+
+.add-button-effect:hover {
+    opacity: 0.65;
 }
 
 .button-text {
