--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -106,6 +106,10 @@ button:hover {
   margin-bottom: 20px;
 }
 
+.movie-list-icon:hover {
+  opacity: 0.65;
+}
+
 .home-header-container {
   width: 100%;
   height: 650px;
