--- a/frontend/src/pages/LoginPage/LoginPage.css
+++ b/frontend/src/pages/LoginPage/LoginPage.css
@@ -1,3 +1,87 @@
 .error {
   color: red;
 }
+
+.login-container {
+  width: 600px;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 150px;
+  border-radius: 20px;
+  height: 450px;
+  display: grid;
+  align-items: center;
+}
+
+.login-form {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.login-input {
+  padding: 15px 20px;
+  width: 350px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  font-family: 'Montserrat';
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.register-link {
+  font-family: 'Montserrat';
+  font-weight: 600;
+  padding: 10px 40px;
+  border: 1px solid gray;
+  border-radius: 30px;
+}
+
+.register-link:hover {
+  background-color: gray;
+}
+
+a:link {
+  text-decoration: none;
+  color: black; 
+}
+
+a:visited {
+  text-decoration: none;
+  color:indianred
+}
+
+.login-submit {
+  padding: 15px 20px;
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: larger;
+  width: 350px;
+  border: none;
+  background-color: lightgray;
+  border-radius: 10px;
+  margin-top: 50px;
+}
+
+.login-submit:hover {
+  background-color: darkgray;
+}
+
+.input-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.secret {
+  -webkit-text-security: disc;
+}
+
+.link-field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
