--- a/frontend/src/components/MovieDetails/MovieDetails.css
+++ b/frontend/src/components/MovieDetails/MovieDetails.css
@@ -99,17 +99,15 @@
 }
 
 .cast-profile {
-    width: 185px;
+    width: 200px;
     height: 250px;
     object-fit: cover;
     object-position: top;
     border-radius: 10px;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .cast-card {
-    background-color: #ebeef0;
-    border-radius: 10px;
     margin-right: 15px;
     height: 350px;
 }
@@ -120,7 +118,7 @@
 
 .cast-container {
     display: flex;
-    height: 400px;
+    height: 375px;
     width: 100%;
     overflow-x: auto;
 }
